improving add movie ui screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="description_str">Description</string>
     <string name="add_photo_str">Add Photo</string>
     <string name="add_movie_str">Add Movie</string>
+    <string name="add_movie_str_major">ADD MOVIE</string>
 
 </resources>
