--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="add_photo_str">Add Photo</string>
     <string name="add_movie_str">Add Movie</string>
     <string name="add_movie_str_major">ADD MOVIE</string>
+    <string name="price_str">Price:</string>
 
 </resources>
