--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,8 @@
     <string name="add_movie_str">Add Movie</string>
     <string name="add_movie_str_major">ADD MOVIE</string>
     <string name="price_str">Price:</string>
+    <string name="sign_in_str">Sign In</string>
+    <string name="rating_str_item">Rating:</string>
+    <string name="genre_str_item">Genre:</string>
 
 </resources>
