--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,19 @@
     <string name="mystery_str">Mystery</string>
     <string name="romance_str">Romance</string>
     <string name="thriller_str">Thriller</string>
+    <string name="comment">Comment</string>
+    <string name="comments">Comments:</string>
+    <string name="desciption">Desciption:</string>
+    <string name="action">Action</string>
+    <string name="genres">Genres:</string>
+    <string name="release_date">Release Date</string>
+    <string name="year">2020</string>
+    <string name="country">Country</string>
+    <string name="nigeria">Nigeria</string>
+    <string name="ratings">Ratings</string>
+    <string name="_5_0">5.0</string>
+    <string name="comment_name">Name</string>
+    <string name="comment_body">Comment</string>
 
     <!--    array for rating spinner -->
     <string-array name="rating">
